--- a/src/app/modules/wallet/toggle.component.html
+++ b/src/app/modules/wallet/toggle.component.html
@@ -7,7 +7,7 @@
     #walletPop
     >{{ walletPopContent }}
   </span>
-  <m-tooltip icon="account_balance" i18n="@@MINDS__WALLET__TOGGLE">
+  <m-tooltip icon="account_balance">
     Wallet
   </m-tooltip>
 </a>
