--- a/src/app/modules/wallet/tokens/tokens.component.html
+++ b/src/app/modules/wallet/tokens/tokens.component.html
@@ -9,7 +9,7 @@
         routerLinkActive="m-page--sidebar--navigation--item-active"
       >
         <i class="material-icons">shopping_cart</i>
-        <span i18n="@@WALLET__TOKENS__PURCHASE">Buy Tokens</span>
+        <span>Buy Tokens</span>
       </a>
 
       <a
@@ -18,7 +18,7 @@
         routerLinkActive="m-page--sidebar--navigation--item-active"
       >
         <i class="material-icons">history</i>
-        <span i18n="@@WALLET__TOKENS__TRANSACTIONS">Transactions</span>
+        <span>Transactions</span>
       </a>
 
       <a
@@ -27,7 +27,7 @@
         routerLinkActive="m-page--sidebar--navigation--item-active"
       >
         <i class="material-icons">local_atm</i>
-        <span i18n="@@WALLET__TOKENS__WITHDRAW">Withdraw</span>
+        <span>Withdraw</span>
       </a>
 
       <a
@@ -36,7 +36,7 @@
         routerLinkActive="m-page--sidebar--navigation--item-active"
       >
         <i class="material-icons">stars</i>
-        <span i18n="@@WALLET__TOKENS__CONTRIBUTIONS">Contributions</span>
+        <span>Contributions</span>
       </a>
 
       <a
@@ -45,7 +45,7 @@
         routerLinkActive="m-page--sidebar--navigation--item-active"
       >
         <i class="material-icons">settings</i>
-        <span i18n="@@WALLET__TOKENS__ADDRESSES">Addresses</span>
+        <span>Addresses</span>
       </a>
       <a
         class="m-page--sidebar--navigation--item"
@@ -53,7 +53,7 @@
         routerLinkActive="m-page--sidebar--navigation--item-active"
       >
         <i class="material-icons">help</i>
-        <span i18n="@@WALLET__TOKENS__TOKEN_101">Token 101</span>
+        <span>Token 101</span>
       </a>
       <a
         class="m-page--sidebar--navigation--item"
@@ -62,7 +62,7 @@
         *mIfFeature="'wire-multi-currency'"
       >
         <i class="material-icons">attach_money</i>
-        <span i18n="@@WALLET__TOKENS__TESTNET_TOKENS">USD Console</span>
+        <span>USD Console</span>
       </a>
       <a
         class="m-page--sidebar--navigation--item"
@@ -70,7 +70,7 @@
         *mIfFeature="'wire-multi-currency'"
       >
         <i class="material-icons">settings</i>
-        <span i18n="@@WALLET__TOKENS__TESTNET_TOKENS">BTC Console</span>
+        <span>BTC Console</span>
       </a>
       <a
         class="m-page--sidebar--navigation--item"
@@ -78,7 +78,7 @@
         routerLinkActive="m-page--sidebar--navigation--item-active"
       >
         <i class="material-icons">people</i>
-        <span i18n="@@M__ACTION__REFERRAL_LINK">Referrals</span>
+        <span>Referrals</span>
       </a>
     </div>
   </div>
