--- a/src/app/modules/wallet/v2/cash/cash.component.html
+++ b/src/app/modules/wallet/v2/cash/cash.component.html
@@ -6,12 +6,20 @@
 
 <div class="m-tabs__container">
   <li class="m-tabs__tab">
-    <a routerLink="transactions" routerLinkActive="selected">
+    <a
+      routerLink="transactions"
+      routerLinkActive="selected"
+      i18n="@@WALLET__V2__TABS__TRANSACTIONS"
+    >
       Transactions
     </a>
   </li>
   <li class="m-tabs__tab">
-    <a routerLink="settings" routerLinkActive="selected">
+    <a
+      routerLink="settings"
+      routerLinkActive="selected"
+      i18n="@@WALLET__V2__TABS__SETTINGS"
+    >
       Settings
     </a>
   </li>
