--- a/src/app/modules/wallet/v2/cash/transactions/transactions-cash.component.html
+++ b/src/app/modules/wallet/v2/cash/transactions/transactions-cash.component.html
@@ -21,6 +21,7 @@
     </div>
     <div
       class="m-walletTransactions__noTxNotice"
+      i18n="@@WALLET__V2__CASH__NO__TRANSACTIONS__YET"
       *ngIf="transactions.length === 0"
     >
       <p>You don't have any cash transactions yet.</p>
