--- a/src/app/modules/wallet/wallet.component.html
+++ b/src/app/modules/wallet/wallet.component.html
@@ -6,30 +6,20 @@
         routerLink="/wallet/tokens"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span i18n="@@WALLET__TOKENS_NAV">Tokens</span>
-        <m-tooltip icon="help" i18n="@@MINDS__WALLET__TOPBAR__TOKENS_TOOLTIP">
+        <span>Tokens</span>
+        <m-tooltip icon="help">
           See your contributions score and rewards, withdraw them and configure
           your ethereum wallet
         </m-tooltip>
       </a>
-
-      <!--<a class="m-topbar--navigation--item"
-        routerLink="/wallet/usd"
-        routerLinkActive="m-topbar--navigation--item-active"
-      >
-        <span i18n="@@WALLET_USD">USD</span>
-        <m-tooltip icon="help" i18n="@@MINDS__WALLET__TOPBAR__USD_TOOLTIP">
-          Your earnings in USD
-        </m-tooltip>
-      </a>-->
 
       <a
         class="m-topbar--navigation--item"
         routerLink="/wallet/wire"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span i18n="@@M__FEATURE__WIRE">Wire</span>
-        <m-tooltip icon="help" i18n="@@MINDS__WALLET__TOPBAR__WIRE_TOOLTIP">
+        <span>Wire</span>
+        <m-tooltip icon="help">
           Your sent and received wires ledger
         </m-tooltip>
       </a>
@@ -39,11 +29,8 @@
         routerLink="/plus"
         routerLinkActive="m-topbar--navigation--item-active"
       >
-        <span i18n="@@M__FEATURE__MINDS_PLUS ">Minds Plus</span>
-        <m-tooltip
-          icon="help"
-          i18n="@@MINDS__WALLET__TOPBAR__MINDS_PLUS_TOOLTIP"
-        >
+        <span>Minds Plus</span>
+        <m-tooltip icon="help">
           Opt-out of boosts, earn 1,000 monthly points, access exclusive Minds
           content, and more
         </m-tooltip>
