--- a/src/app/modules/wallet/tokens/referrals/referrals.component.html
+++ b/src/app/modules/wallet/tokens/referrals/referrals.component.html
@@ -1,10 +1,10 @@
 <section class="m-border">
-  <h2 i18n="@@M_REFERRALS__PAGE_HEADER">Referrals</h2>
+  <h2>Referrals</h2>
   <m-referrals--links></m-referrals--links>
 </section>
 <section class="m-border">
-  <h3 i18n="@@M_REFERRALS__BLURB_HEADER">How does it work?</h3>
-  <p class="m-referrals__blurb" i18n="@@M_REFERRALS__BLURB_HEADER">
+  <h3>How does it work?</h3>
+  <p class="m-referrals__blurb">
     If your friend signs up for Minds within 24 hours of clicking the link you
     shared with them, they’ll be added to your pending referrals. Once they sign
     up for the rewards program by setting up their Minds wallet, the referral is
