--- a/src/app/modules/wallet/tokens/withdraw/withdraw.component.html
+++ b/src/app/modules/wallet/tokens/withdraw/withdraw.component.html
@@ -8,23 +8,20 @@
   class="m-border mdl-color--white m-token-withdraw"
   *ngIf="session.getLoggedInUser().rewards"
 >
-  <p i18n="@@WALLET__TOKENS__101__CAN_REQUEST_TO_WITHDRAW_UP_TO">
+  <p>
     You can request to withdraw up to {available, plural, =1
     {{{available | number}} token} other {{{available | number}} tokens}} from
     your rewards to your <b>OnChain</b> wallet below.
   </p>
 
-  <p *ngIf="withholding" i18n="@@WALLET__TOKENS__101__WITHHOLDING__TEXT">
+  <p *ngIf="withholding">
     {withholding, plural, =1
     {{{withholding | number}} token} other {{{withholding | number}} tokens}}
     are unavailable due to credit card payment. They will be released 30 days
     after the payment occurred.
   </p>
 
-  <p
-    class="m-token-withdraw__note"
-    i18n="@@WALLET__TOKENS__101__SMALL_ETH_CHARGED"
-  >
+  <p class="m-token-withdraw__note">
     Note: a small amount of ETH will be charged to cover the transaction fee.
     Withdrawals <b>go through an approval process</b>
     and may take up to 72 hours to complete.
@@ -43,7 +40,6 @@
       class="m-token-withdraw--submit-button"
       [disabled]="!canWithdraw()"
       (click)="withdraw()"
-      i18n="@@WALLET__TOKENS__WITHDRAW__WITHDRAW_ACTION"
     >
       Withdraw
     </button>
