--- a/src/app/modules/wire/marketing/marketing.component.html
+++ b/src/app/modules/wire/marketing/marketing.component.html
@@ -1,6 +1,10 @@
 <div class="mf-jumpAnchor" #topAnchor></div>
 
-<m-marketing class="m-pay__marketing" pageTitle="Minds Pay" i18n-pageTitle>
+<m-marketing
+  class="m-pay__marketing"
+  pageTitle="Minds Pay"
+  i18n-pageTitle="@@PAY__MARKETING__PAGE__TITLE"
+>
   <div class="m-marketing__main m-marketing__section--style-2">
     <div class="m-grid m-marketing__wrapper">
       <div class="m-grid__column-7 m-grid__column-12--mobile m-marketing__body">
